version/0.19/_sources/api/solver/_autosummary/settings/solid_child_1.rst.txt
:orphan:

.. _solid_child_1:

solid_child
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.solid_child_1.solid_child
    :show-inheritance:

.. rubric:: Attributes

============================================================   ==============================

Attribute                                                                             Summary

============================================================   ==============================
:ref:`name <name>`                                                        Name of the object.

:ref:`phase <phase_1>`                                                         'phase' child.

:ref:`material <material_1>`                                                   Material Name.

:ref:`participates_in_radiation <participates_in_radiation>`       Participates in radiation.

:ref:`reference_frame <reference_frame_1>`                                Help not available.

:ref:`mesh_motion <mesh_motion_1>`                                        Help not available.

:ref:`solid_motion <solid_motion_1>`                                      Help not available.

:ref:`source_terms <source_terms_3>`                                      Help not available.

:ref:`fixed_values <fixed_values_1>`                                      Help not available.

:ref:`material_orientation <material_orientation>`                        Help not available.

:ref:`disabled <disabled_1>`                                              Help not available.

:ref:`internal <internal>`                                                Help not available.

============================================================   ==============================

.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`solid <solid_1>`       'solid' child.

======================   ==================

