version/0.26/_sources/api/solver/_autosummary/settings/solid_child_1.rst.txt
:orphan:

.. _solid_child_1:

solid_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.solid_child_1.solid_child
    :show-inheritance:

.. rubric:: Attributes

==================================================   ======================================

Attribute                                                                           Summary

==================================================   ======================================
:ref:`name <name>`                                                      Name of the object.

:ref:`phase <phase_1>`                                                       'phase' child.

:ref:`general <general_3>`                               Set settings of selected variable.

:ref:`reference_frame <reference_frame_3>`                              Help not available.

:ref:`mesh_motion <mesh_motion>`                                        Help not available.

:ref:`solid_motion <solid_motion>`                                      Help not available.

:ref:`sources <sources>`                                   Source terms for this cell zone.

:ref:`fixed_values <fixed_values>`                                      Help not available.

:ref:`material_orientation <material_orientation>`                      Help not available.

:ref:`disabled <disabled_1>`                                            Help not available.

:ref:`internal <internal>`                                              Help not available.

==================================================   ======================================

.. rubric:: Included in:

======================   ============================================

Parent                                                        Summary

======================   ============================================
:ref:`solid <solid_2>`       Settings for cell zone condition object.

======================   ============================================

